--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Heavens Arena</title>
     <link href="/styles.css" type="text/css" rel="stylesheet" />
+    <link rel="shortcut icon" href="images/favicon/tower_icon.png" type="image/x-icon" />
   </head>
   <body>
     <div class="game-container">
