fix: adjust size map

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <title>Heavens Arena</title>
     <link href="/styles.css" type="text/css" rel="stylesheet" />
-    <link rel="shortcut icon" href="images/favicon/tower_icon.png" type="image/x-icon" />
+    <link
+      href="images/favicon/tower_icon.png"
+      type="image/x-icon"
+      rel="shortcut icon"
+    />
   </head>
   <body>
     <div class="game-container">
-      <canvas class="game-canvas" width="350" height="230"></canvas>
+      <canvas class="game-canvas" width="352" height="224"></canvas>
     </div>
 
     <!-- Scripts -->
