--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     />
   </head>
   <body>
+    <div class="development-bar">
+      <button type="button" class="on">AI</button>
+      <button type="button" class="on">PVP</button>
+      <button type="button" class="off" onclick="toggleGrid(this)">Grid</button>
+    </div>
     <div class="game-container">
+      <div class="grid-overlay"></div>
       <canvas class="game-canvas" width="352" height="224"></canvas>
     </div>
 
     <!-- Scripts -->
     <script type="module" src="/init.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
   </body>
 </html>
