refactor: change project structure

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Heavens Arena</title>
-    <link href="/styles.css" type="text/css" rel="stylesheet" />
     <link
-      href="images/favicon/tower_icon.png"
       type="image/x-icon"
-      rel="shortcut icon"
+      href="src/assets/icons/tower_icon.png"
+      rel="icon"
     />
+    <link type="text/css" href="src/assets/html/styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="development-bar">
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="/init.js"></script>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="/src/assets/html/index.js"></script>
+    <script type="module" src="src/init.js"></script>
   </body>
 </html>
